@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.184 2002/04/29 02:13:43 ronpinkas Exp $
+ * $Id: ChangeLog,v 1.185 2002/04/29 18:20:25 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2002-04-29 16:20 UTC-0300 Luiz Rafael Culik <culikr@uol.com.br>
+  * source/rtl/set.c
+    ! Replaced calls to stricmp with hb_stricmp
 
 2002-04-29 11:18 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
   * include/hbexprb.c
